--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,19 +2,13 @@
     text-align: center;
     font-size: 20px;
     color: #2c3e50;
-    display: flex;
-    align-items: center;
-    height: 100vh;
+    height: 800px;
     flex-direction: column;
-    gap: 20px;
     background-color: #f5f5f5;
     padding: 20px;
     box-sizing: border-box;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-family: 'Arial', sans-serif;
-    user-select: none;
-    cursor: default;
 }
 
 .title {
@@ -22,14 +16,11 @@
     font-weight: bold;
     color: #4caf50;
     margin-bottom: 20px;
+
 }
 
 .table {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-    max-width: 600px;
+    width: 800px;
     margin: 0 auto;
     border-collapse: collapse;
     background-color: #fff;
@@ -38,25 +29,19 @@
     overflow: hidden;
     font-size: 16px;
     color: #2c3e50;
-    cursor: default;
-    user-select: none;
-    text-align: center;
+    border-spacing: 0 10px;
+    text-align: left;
 }
-
-
 
 .thead {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
     background-color: #4caf50;
     color: white;
     padding: 10px;
     border-radius: 5px;
-    text-align: center;
     font-size: 20px;
     font-weight: bold;
-
 }
 
 .thead button {
@@ -69,18 +54,12 @@
 }
 
 .tbody {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
     background-color: #fff;
     border-radius: 5px;
-
 }
 
 .tbody tr {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #ccc;
